# vcglib

./: CMakeLists.txt
eigenlib/: howto.txt
vcg/complex/algorithms/: mesh_to_matrix.h  overlap_estimation.h  refine.h
vcg/complex/algorithms/create/: platonic.h
vcg/complex/algorithms/update/: halfedge_topology.h
vcg/space/index/: spatial_hashing.h
